# adaptive-maritime-routing

./: .gitignore  README.md  index.html  package-lock.json  package.json
server/: CMakeLists.txt  README.md
server/src/: astar.cpp  astar.h  main.cpp  routes.cpp  routes.h  simulation_state.h  step_simulator.cpp  step_simulator.h  types.h  vector_field.cpp  vector_field.h
src/: index.css
src/api/: backendApi.ts
src/canvas/: SimulationCanvas.tsx  drawCurrentOverlay.ts  drawSimulation.ts  drawVectorFieldOverlay.ts  useSimulationCanvas.ts
src/components/: AnalyticsPanel.tsx  AppLayout.tsx  Sidebar.tsx
src/context/: SimulationControlsProvider.tsx  simulationControlsContext.ts
src/engine/: analytics.ts  applySceneFromControls.ts  astar.ts  comparison.ts  index.ts  navigationEscape.ts  obstacleMotion.ts  oceanCurrents.ts  simulationScene.ts  spatialGrid.ts  stepVectorFieldSimulation.ts  vectorFieldNavigation.ts
src/hooks/: useSimulationControls.ts
src/models/: index.ts  obstacle.ts  ship.ts  simulation.ts  vector.ts
src/simulation/: scenePersistence.ts  simulationRuntime.ts
src/utils/: canvasHiDpi.ts  canvasPointer.ts  clamp.ts  index.ts
